force-app/main/default/objects/AI_Assistive_Analysis__c/AI_Assistive_Analysis__c.object-meta.xml
<CustomObject>
    <label>AI Assistive Analysis</label>
    <nameField>
        <displayFormat>AAA-{000000}</displayFormat>
        <label>AI Assistive Analysis Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI Assistive Analysis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>