force-app/main/default/objects/AI_Assistive_Analysis__c/fields/Analysis__c.field-meta.xml
<CustomField>
    <fullName>Analysis__c</fullName>
    <label>Analysis</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>