force-app/main/default/objects/AI_Assistive_Analysis__c/fields/Trigger_Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Field_Value__c</fullName>
    <label>Trigger Field Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>